try to make subcontents appear

--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -29,6 +29,8 @@
   {% endif %}
   </div><!-- /.image-wrap -->
 {% endif %}
+
+<div>
 {% if page.submenu %}
             <h3>Chapter Contents</h3>
             <ul>
@@ -37,6 +39,8 @@
           {% endfor %}
         </ul>
 {% endif %}
+</div>
+
 <div class="article-author-side">
   {% include _author-bio.html %}
 </div>
